--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 #   git config --global core.excludesfile '~/.gitignore_global'
 
 
+/app/controllers/events_controller.rb
+/app/assets/javascripts/index.js
 
 # Ignore bundler config.
 /.bundle
